--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,32 +1,52 @@
+<!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8"/>
+		<title>The responsive Bootstrap grid </title>
+		<link rel ="stylesheet" href="/static/css/bootstrap.min.css">
+		<link rel ="stylesheet" href="/static/css/bootstrap-theme.min.css">
+	</head>
 
-<head>
-    <meta charset="utf-8">
-    <title>Login</title>
+	<body>
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/login.css" rel="stylesheet">
-	
+		<div class="container">
 
-</head>
+			<div class="row">
+				<div style="min-height: 50px;" class="col-lg-12 bg-danger" align="center">
+					<h1>DETI          10-07-2015          17:10</h1>
+				</div>
+			</div>
 
-<body>
-	
-	<div class="wrapper"> 
-      <h2 class="form-signin-heading">Please login</h2>
-      <input type="text" id="userbox" class="form-control" name="username" placeholder="Username" required="" autofocus="" />
-      <input type="password" id="userpass" class="form-control" name="password" placeholder="Password" required=""/>      
-      <label class="checkbox">
-        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-      </label>
-      <button class="btn btn-lg btn-primary btn-block" id="login" type="submit">Login</button>  
-   </div>
-  
-	 <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="static/login.js"></script>
+			<div class="row">
+				<div style="min-height: 500px;" id="content" class="col-lg-9 bg-info" align="center">
+					<!-- aqui vai o conteudo -->
+				</div>
+				<div style="min-height: 300px;" class="col-lg-3 bg-danger" align="center">
+					Here <br>
+					comes <br>
+					the <br>
+					whether <br>
 
-</body>
+				</div>
 
+				<div style="min-height: 200px;" class="col-lg-3 bg-warning" align="center">
+					<span style="position:absolute; bottom:0; left:10%;"> 
+						<img width="120px" src="/static/QR/fb.png">
+						<img align="right" width="120px" src="/static/QR/ua.png">
+					</span>
+				</div>
+
+			</div>
+			<br>
+			<div class="row">
+				<div style="min-height: 50px;" class="col-lg-12 bg-danger" align="center">
+					Tweets
+				</div>
+			</div>
+		</div>
+
+		<script src="/static/js/jquery.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
+		<script src="/static/js/raspi-tv-front.js"></script>
+	</body>
 </html>
