Relative Paths Fixed Db connection Fixed and improved

--- a/src/static/login.html
+++ b/src/static/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/login.css" rel="stylesheet">
+    <link href="/static/login.css" rel="stylesheet">
 	
 
 </head>
@@ -25,7 +25,7 @@
 	 <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="static/login.js"></script>
+    <script src="/static/login.js"></script>
 
 </body>
 
