Some Login Adjustments

--- a/src/static/login.html
+++ b/src/static/login.html
@@ -19,6 +19,7 @@
       <label class="checkbox">
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
       </label>
+        <div id="message"></div>
       <button class="btn btn-lg btn-primary btn-block" id="login" type="submit">Login</button>  
    </div>
   
