--- a/src/static/login.html
+++ b/src/static/login.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Login Page</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/login.css" rel="stylesheet">
@@ -12,17 +12,34 @@
 
 <body>
 	
-	<div class="wrapper"> 
-      <h2 class="form-signin-heading">Please login</h2>
-      <input type="text" id="userbox" class="form-control" name="username" placeholder="Username" required="" autofocus="" />
-      <input type="password" id="userpass" class="form-control" name="password" placeholder="Password" required=""/>      
-      <label class="checkbox">
-        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-      </label>
-        <div id="message"></div>
-      <button class="btn btn-lg btn-primary btn-block" id="login" type="submit">Login</button>  
-   </div>
-  
+	<section id="login">
+	    <div class="container">
+	    	<div class="row">
+	    	    <div class="col-xs-12">
+	        	    <div class="form-wrap">
+	                <h1>Raspi-TV Admin Login</h1>
+	                    <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
+	                        <div class="form-group">
+	                            <label for="userbox" class="sr-only">Username</label>
+	                            <input type="text" name="username" id="userbox" class="form-control" placeholder="Admin" required="" autofocus="">
+	                        </div>
+	                        <div class="form-group">
+	                            <label for="userpass" class="sr-only">Password</label>
+	                            <input type="password" name="key" id="userpass" class="form-control" placeholder="Password" required="">
+	                        </div>
+                            <div id = "message"></div>
+	                        <div class="checkbox">
+	                            <span class="character-checkbox" onclick="showPassword()"></span>
+	                            <span class="label">Show password</span>
+	                        </div>
+	                        <button type="button" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">Log In</button>
+	                    </form>
+	        	    </div>
+	    		</div> <!-- /.col-xs-12 -->
+	    	</div> <!-- /.row -->
+	    </div> <!-- /.container -->
+	</section>
+
 	 <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
