--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>The responsive Bootstrap grid </title>
-		<link rel ="stylesheet" href="/static/css/bootstrap.min.css">
-		<link rel ="stylesheet" href="/static/css/bootstrap-theme.min.css">
+		<link rel ="stylesheet" href="/css/bootstrap.min.css">
+		<link rel ="stylesheet" href="/css/bootstrap-theme.min.css">
 	</head>
 
 	<body>
@@ -31,8 +31,8 @@
 
 				<div style="min-height: 200px;" class="col-lg-3 bg-warning" align="center">
 					<span style="position:absolute; bottom:0; left:10%;"> 
-						<img width="120px" src="/static/QR/fb.png">
-						<img align="right" width="120px" src="/static/QR/ua.png">
+						<img width="120px" src="QR/fb.png">
+						<img align="right" width="120px" src="QR/ua.png">
 					</span>
 				</div>
 
@@ -45,8 +45,8 @@
 			</div>
 		</div>
 
-		<script src="/static/js/jquery.min.js"></script>
-		<script src="/static/js/bootstrap.min.js"></script>
-		<script src="/static/js/raspi-tv-front.js"></script>
+		<script src="/js/jquery.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/raspi-tv-front.js"></script>
 	</body>
 </html>
