weather icons added with clean wwather experiment

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -21,7 +21,7 @@
 				<div style="min-height: 500px;" id="content" class="col-lg-9 bg-info" align="center">
 					<!-- aqui vai o conteudo -->
 				</div>
-				<div style="min-height: 300px;" class="col-lg-3 bg-danger" align="center">
+				<div style="min-height: 300px;" class="col-lg-3 bg-danger" id="weather" align="center">
 					Here <br>
 					comes <br>
 					the <br>
