Added Dropbox API authentication. Not complete in api.py.

--- a/src/static/admin/pages/accounts.html
+++ b/src/static/admin/pages/accounts.html
@@ -241,7 +241,7 @@
                                     <h3 class="box-title">Dropbox</h3>
                                     <div class="box-tools">
                                         <div class="pull-right">
-                                            <a href="#"><i class="fa fa-plus"></i> New account</a>
+                                            <a id="dropbox-new-account" target="_blank" href="https://www.dropbox.com/1/oauth2/authorize?response_type=code&client_id=rbfnah947b3iobb"><i class="fa fa-plus"></i> New account</a>
                                         </div>
                                     </div>
                                 </div><!-- /.box-header -->
