Dropbox - add account

--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -109,8 +109,8 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="pages/accounts.html#dropbox"><i class="fa fa-angle-double-right"></i> Dropbox</a></li>
-                                <li><a href="pages/accounts.html#twitter"><i class="fa fa-angle-double-right"></i> Twitter</a></li>
+                                <li><a href="pages/accounts/accounts.html#dropbox"><i class="fa fa-angle-double-right"></i> Dropbox</a></li>
+                                <li><a href="pages/accounts/accounts.html#twitter"><i class="fa fa-angle-double-right"></i> Twitter</a></li>
                             </ul>
                         </li>
                         <li>
