--- a/src/static/login.html
+++ b/src/static/login.html
@@ -1,50 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html class="bg-black">
+    <head>
+        <meta charset="UTF-8">
+        <title>AdminLTE | Log in</title>
+        <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+        <!-- bootstrap 3.0.2 -->
+        <link href="/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <!-- font Awesome -->
+        <link href="/admin/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <!-- Theme style -->
+        <link href="/admin/css/AdminLTE.css" rel="stylesheet" type="text/css" />
 
-<head>
-    <meta charset="utf-8">
-    <title>Login Page</title>
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body class="bg-black">
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/login.css" rel="stylesheet">
-	
+        <div class="form-box" id="login-box">
+            <div class="header">Sign In</div>
+            <form action="/auth/login" method="post">
+                <div class="body bg-gray">
+                    <div class="form-group">
+                        <input type="text" name="username" class="form-control" placeholder="User ID" value="%(username)s"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password" class="form-control" placeholder="Password"/>
+                    </div>
+                </div>
+                <div class="footer">                                                               
+                    <button type="submit" class="btn bg-olive btn-block">Sign me in</button>  
+                    
+                    <p><a href="#">I forgot my password</a></p>
+                    
+                    <a href="#" title="Registrations not possible through the web interface." class="text-center">Register a new membership</a>
+                </div>
+            </form>
 
-</head>
+            <div class="margin text-center">
+                <span>%(msg)s</span>
 
-<body>
-	
-	<section id="login">
-	    <div class="container">
-	    	<div class="row">
-	    	    <div class="col-xs-12">
-	        	    <div class="form-wrap">
-	                <h1>Raspi-TV Admin Login</h1>
-	                    <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
-	                        <div class="form-group">
-	                            <label for="userbox" class="sr-only">Username</label>
-	                            <input type="text" name="username" id="userbox" class="form-control" placeholder="Admin" required="" autofocus="">
-	                        </div>
-	                        <div class="form-group">
-	                            <label for="userpass" class="sr-only">Password</label>
-	                            <input type="password" name="key" id="userpass" class="form-control" placeholder="Password" required="">
-	                        </div>
-                            <div id = "message"></div>
-	                        <div class="checkbox">
-	                            <span class="character-checkbox" onclick="showPassword()"></span>
-	                            <span class="label">Show password</span>
-	                        </div>
-	                        <button type="button" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">Log In</button>
-	                    </form>
-	        	    </div>
-	    		</div> <!-- /.col-xs-12 -->
-	    	</div> <!-- /.row -->
-	    </div> <!-- /.container -->
-	</section>
+            </div>
+        </div>
 
-	 <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="/js/login.js"></script>
 
-</body>
+        <!-- jQuery 2.0.2 -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <!-- Bootstrap -->
+        <script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
 
+    </body>
 </html>
