Modifyed Dropbox API authentication.

--- a/src/static/admin/pages/accounts/accounts.html
+++ b/src/static/admin/pages/accounts/accounts.html
@@ -252,7 +252,7 @@
 
                             <div class="box-tools">
                                 <div class="pull-right">
-                                    <a href="register-dropbox.html"><i class="fa fa-plus"></i> New account</a>
+                                    <a href="https://www.dropbox.com/1/oauth2/authorize?response_type=token&client_id=rbfnah947b3iobb&redirect_uri=http://localhost:63342/Raspi-TV/src/static/admin/pages/accounts/accounts.html"><i class="fa fa-plus"></i> New account</a>
                                 </div>
                             </div>
                         </div>
