--- a/src/static/index.html
+++ b/src/static/index.html
@@ -18,16 +18,34 @@
 			</div>
 
 			<div class="row">
-				<div style="min-height: 500px;" id="content" class="col-lg-9 bg-info" align="center">
+				<div style="height: 1500px;" id="content" class="col-lg-9 bg-info" align="center">
 					<!-- aqui vai o conteudo -->
 				</div>
-				<div style="min-height: 300px;" class="col-lg-3 bg-danger" id="weather" align="center">
+
+				<div style="min-height: 300px;" class="col-lg-3" id="weather" align="center">
 					Here <br>
 					comes <br>
 					the <br>
 					whether <br>
 
 				</div>
+
+
+				<div style="min-height: 90px;" class="col-lg-3" align="center" id="hum">
+				hum
+
+				</div>
+
+				<div style="min-height: 90px;" class="col-lg-3" align="center" id="temp">
+				temp
+
+				</div>
+
+				<div style="min-height: 90px;" class="col-lg-3" align="center" id="wind">
+				wind
+
+				</div>
+
 
 				<div style="min-height: 200px;" class="col-lg-3 bg-warning" align="center">
 					<span style="position:absolute; bottom:0; left:10%;"> 
