--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>The responsive Bootstrap grid </title>
+		<title> Index </title>
 		<link rel ="stylesheet" href="/css/bootstrap.min.css">
 		<link rel ="stylesheet" href="/css/bootstrap-theme.min.css">
 	</head>
