--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -5,29 +5,29 @@
     <title>Raspi-TV | Dashboard</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- bootstrap 3.0.2 -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <!-- font Awesome -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <!-- Ionicons -->
-    <link href="css/ionicons.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <!-- Morris chart -->
-    <link href="css/morris/morris.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/morris/morris.css" rel="stylesheet" type="text/css"/>
     <!-- jvectormap -->
-    <link href="css/jvectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/jvectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css"/>
     <!-- fullCalendar -->
-    <link href="css/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
     <!-- Daterange picker -->
-    <link href="css/daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
     <!-- bootstrap wysihtml5 - text editor -->
-    <link href="css/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
-    <link href="css/AdminLTE.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/AdminLTE.css" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="/admin/js/html5shiv.js"></script>
+    <script src="/admin/js/respond.min.js"></script>
     <![endif]-->
 </head>
 <body class="skin-blue">
@@ -53,15 +53,15 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"></i>
-                        <span><span class="username">Jane Doe</span> <i class="caret"></i></span>
+                        <span><span class="user_id"></span> <i class="caret"></i></span>
                     </a>
-                    <ul class="dropdown-menu">
-                        <!-- User image -->
-                        <li class="user-header bg-light-blue">
+                    <ul id="user_info" class="dropdown-menu">
+                        <!-- User info -->
+                        <li id="login-row" class="user-header bg-light-blue">
 
                             <p>
-                                <span class="username">Jane Doe - Web Developer</span>
-                                <small>Member since Nov. 2012</small>
+                                <span class="user_first"></span> <span class="user_last"></span>
+                                <small>Member since <span class="user_date"></span></small>
                             </p>
                         </li>
                         <!-- Menu Footer-->
@@ -98,9 +98,11 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="pages/accounts/accounts.html#dropbox"><i class="fa fa-angle-double-right"></i>
+                        <li><a href="/admin/pages/accounts/accounts.html#dropbox"><i
+                                class="fa fa-angle-double-right"></i>
                             Dropbox</a></li>
-                        <li><a href="pages/accounts/accounts.html#twitter"><i class="fa fa-angle-double-right"></i>
+                        <li><a href="/admin/pages/accounts/accounts.html#twitter"><i
+                                class="fa fa-angle-double-right"></i>
                             Twitter</a></li>
                     </ul>
                 </li>
@@ -615,7 +617,7 @@
                         <div class="box-body chat" id="chat-box">
                             <!-- chat item -->
                             <div class="item">
-                                <img src="img/avatar.png" alt="user image" class="online"/>
+                                <img src="/admin/img/avatar.png" alt="user image" class="online"/>
 
                                 <p class="message">
                                     <a href="#" class="name">
@@ -642,7 +644,7 @@
                             <!-- /.item -->
                             <!-- chat item -->
                             <div class="item">
-                                <img src="img/avatar2.png" alt="user image" class="offline"/>
+                                <img src="/admin/img/avatar2.png" alt="user image" class="offline"/>
 
                                 <p class="message">
                                     <a href="#" class="name">
@@ -657,7 +659,7 @@
                             <!-- /.item -->
                             <!-- chat item -->
                             <div class="item">
-                                <img src="img/avatar3.png" alt="user image" class="offline"/>
+                                <img src="/admin/img/avatar3.png" alt="user image" class="offline"/>
 
                                 <p class="message">
                                     <a href="#" class="name">
@@ -812,36 +814,36 @@
 
 
 <!-- jQuery 2.0.2 -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script src="/admin/js/jquery.min.js"></script>
 <!-- jQuery UI 1.10.3 -->
-<script src="js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+<script src="/admin/js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
 <!-- Bootstrap -->
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- Morris.js charts -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script src="js/plugins/morris/morris.min.js" type="text/javascript"></script>
+<script src="/admin/js/raphael-min.js"></script>
+<script src="/admin/js/plugins/morris/morris.min.js" type="text/javascript"></script>
 <!-- Sparkline -->
-<script src="js/plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <!-- jvectormap -->
-<script src="js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
-<script src="js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
 <!-- fullCalendar -->
-<script src="js/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
 <!-- jQuery Knob Chart -->
-<script src="js/plugins/jqueryKnob/jquery.knob.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/jqueryKnob/jquery.knob.js" type="text/javascript"></script>
 <!-- daterangepicker -->
-<script src="js/plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
 <!-- Bootstrap WYSIHTML5 -->
-<script src="js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
 <!-- iCheck -->
-<script src="js/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
+<script src="/admin/js/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
 
 <!-- AdminLTE App -->
-<script src="js/AdminLTE/app.js" type="text/javascript"></script>
+<script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
 
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="js/AdminLTE/dashboard.js" type="text/javascript"></script>
+<script src="/admin/js/AdminLTE/dashboard.js" type="text/javascript"></script>
 <!-- Mine -->
-<script src="js/index.js" type="text/javascript"></script>
+<script src="/admin/js/admin.js" type="text/javascript"></script>
 </body>
 </html>
