--- a/src/static/admin/pages/accounts/accounts.html
+++ b/src/static/admin/pages/accounts/accounts.html
@@ -5,25 +5,25 @@
     <title>Raspi-TV | Accounts</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- bootstrap 3.0.2 -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <!-- font Awesome -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <!-- Ionicons -->
-    <link href="../../css/ionicons.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
-    <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin/css/AdminLTE.css" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="/admin/js/html5shiv.js"></script>
+    <script src="/admin/js/respond.min.js"></script>
     <![endif]-->
 </head>
 <body class="skin-blue">
 <!-- header logo: style can be found in header.less -->
 <header class="header">
-    <a href="../../index.html" class="logo">
+    <a href="/admin/index.html" class="logo">
         <!-- Add the class icon to your logo image or logo icon to add the margining -->
         Raspi-TV
     </a>
@@ -43,29 +43,16 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"></i>
-                        <span>Jane Doe <i class="caret"></i></span>
+                        <span><span class="user_id"></span> <i class="caret"></i></span>
                     </a>
-                    <ul class="dropdown-menu">
-                        <!-- User image -->
-                        <li class="user-header bg-light-blue">
-                            <img src="../../img/avatar3.png" class="img-circle" alt="User Image"/>
+                    <ul id="user_info" class="dropdown-menu">
+                        <!-- User info -->
+                        <li id="login-row" class="user-header bg-light-blue">
 
                             <p>
-                                Jane Doe - Web Developer
-                                <small>Member since Nov. 2012</small>
+                                <span class="user_first"></span> <span class="user_last"></span>
+                                <small>Member since <span class="user_date"></span></small>
                             </p>
-                        </li>
-                        <!-- Menu Body -->
-                        <li class="user-body">
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Followers</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Sales</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Friends</a>
-                            </div>
                         </li>
                         <!-- Menu Footer-->
                         <li class="user-footer">
@@ -73,7 +60,7 @@
                                 <a href="#" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a id="logout" href="#" class="btn btn-default btn-flat">Sign out</a>
+                                <a href="/auth/logout" class="btn btn-default btn-flat">Sign out</a>
                             </div>
                         </li>
                     </ul>
@@ -90,7 +77,7 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="active">
-                    <a href="../../index.html">
+                    <a href="/admin/index.html">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
@@ -252,7 +239,8 @@
 
                             <div class="box-tools">
                                 <div class="pull-right">
-                                    <a href="https://www.dropbox.com/1/oauth2/authorize?response_type=token&client_id=rbfnah947b3iobb&redirect_uri=http://localhost:63342/Raspi-TV/src/static/admin/pages/accounts/accounts.html"><i class="fa fa-plus"></i> New account</a>
+                                    <a href="https://www.dropbox.com/1/oauth2/authorize?response_type=token&client_id=rbfnah947b3iobb&redirect_uri=http://localhost:63342/Raspi-TV/src/static/admin/pages/accounts/accounts.html"><i
+                                            class="fa fa-plus"></i> New account</a>
                                 </div>
                             </div>
                         </div>
@@ -341,12 +329,13 @@
 
 
 <!-- jQuery 2.0.2 -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script src="/admin/js/jquery.min.js"></script>
 <!-- Bootstrap -->
-<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- AdminLTE App -->
-<script src="../../js/AdminLTE/app.js" type="text/javascript"></script>
+<script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
 <!-- Mine -->
-<script src="../../js/admin.js" type="text/javascript"></script>
+<script src="/admin/js/admin.js" type="text/javascript"></script>
+<script src="/admin/js/accounts.js" type="text/javascript"></script>
 </body>
 </html>
