header + page resize

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,16 +9,28 @@
 
 	<body>
 
-		<div class="container">
+		<div style="width: 100%;" class="container">
 
 			<div class="row">
-				<div style="min-height: 50px;" class="col-lg-12 bg-danger" align="center">
-					<h1>DETI          10-07-2015          17:10</h1>
+				<div style="min-height: 150px; background-image: url('img/img/wild_flowers.png'); background-size: auto auto;" class="col-lg-12" align="center">
+					<br><br><br>
+						<div class="row">
+							<div class="col-lg-12" align="center" style="background-color: white; min-height: 100px; width: 100%;">
+								<br>
+								<img src="img/img/logo.png" align="right" width="10%">
+								<h2 style="color: #33B3D1;" align="left">DETI</h2>
+								<h4 style="color: #33B3D1;" align="left">Departamento de Eletrónica, Telecomunicações e Informática</h4>
+
+								<br>
+
+							</div>
+						</div>
+					<br><br><br>
 				</div>
 			</div>
 
 			<div class="row">
-				<div style="height: 1500px;" id="content" class="col-lg-9 bg-info" align="center">
+				<div style="height: 1500px;" id="content" class="col-lg-9" align="center">
 					<!-- aqui vai o conteudo -->
 				</div>
 
