--- a/src/static/admin/pages/accounts/accounts.html
+++ b/src/static/admin/pages/accounts/accounts.html
@@ -264,6 +264,31 @@
                             <h3 class="box-title">Twitter</h3>
 
                             <div class="box-tools">
+                                <div class="pull-right">
+                                    <a href="register_twitter.html"><i class="fa fa-plus"></i> New account</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body table-responsive no-padding">
+                            <table id="twitter-table" class="table table-hover">
+                                <!-- Content goes here -->
+                            </table>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+            </div>
+            <!-- /.Twitter -->
+            <!-- Twitter -->
+            <div id="twitter.old" class="row">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-header">
+                            <h3 class="box-title">Twitter</h3>
+
+                            <div class="box-tools">
                                 <div class="input-group">
                                     <input type="text" name="table_search" class="form-control input-sm pull-right"
                                            style="width: 150px;" placeholder="Search"/>
