--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,6 +7,7 @@
 		<link rel ="stylesheet" href="/css/bootstrap-theme.min.css">
 	</head>
 
+
 	<body>
 
 		<div style="width: 100%;" class="container">
@@ -18,8 +19,26 @@
 							<div class="col-lg-12" align="center" style="background-color: white; min-height: 100px; width: 100%;">
 								<br>
 								<img src="img/img/logo.png" align="right" width="10%">
+								<p id="date_time" style="color: #33B3D1;" align="right"></p>
 								<h2 style="color: #33B3D1;" align="left">DETI</h2>
 								<h4 style="color: #33B3D1;" align="left">Departamento de Eletrónica, Telecomunicações e Informática</h4>
+
+								<script>
+
+									function date_and_time(){
+										var tmp = Date();
+										tmp = tmp.split("GMT");
+										document.getElementById("date_time").innerHTML = tmp[0];
+
+									setTimeout(function () {
+										date_and_time();
+									}, 10);
+
+									};
+
+									date_and_time()
+
+								</script>
 
 								<br>
 
