--- a/src/static/admin/empty.html
+++ b/src/static/admin/empty.html
@@ -101,6 +101,7 @@
                             <ul class="treeview-menu">
                                 <li><a href="#dropbox"><i class="fa fa-angle-double-right"></i> Dropbox</a></li>
                                 <li><a href="#twitter"><i class="fa fa-angle-double-right"></i> Twitter</a></li>
+                                <li><a href="/admin/changes.html"><i class="fa fa-angle-double-right"></i>Changes</a></li>
                             </ul>
                         </li>
                         <li>
