--- a/src/static/admin/profile.html
+++ b/src/static/admin/profile.html
@@ -92,6 +92,9 @@
                                 class="fa fa-angle-double-right"></i> Dropbox</a></li>
                         <li><a href="/admin/pages/accounts/accounts.html#twitter"><i
                                 class="fa fa-angle-double-right"></i> Twitter</a></li>
+                        <li><a href="/admin/changes.html"><i
+                                class="fa fa-angle-double-right"></i>
+                            Changes</a></li>
                     </ul>
                 </li>
                 <li>
