--- a/src/static/index.html
+++ b/src/static/index.html
@@ -98,5 +98,6 @@
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/raspi-tv-front.js"></script>
+		<script src="/js/changes.js"></script>
 	</body>
 </html>
