--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -104,6 +104,9 @@
                         <li><a href="/admin/pages/accounts/accounts.html#twitter"><i
                                 class="fa fa-angle-double-right"></i>
                             Twitter</a></li>
+                        <li><a href="/admin/changes.html"><i
+                                class="fa fa-angle-double-right"></i>
+                            Changes</a></li>
                     </ul>
                 </li>
                 <li>
