Fix html links and ajax urls

--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -57,7 +57,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Page Changes</a>
+                                <a href="/admin/profile.html" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
                                 <a href="/auth/logout" class="btn btn-default btn-flat">Sign out</a>
@@ -247,11 +247,11 @@
                             <table id="dropbox-table" class="table table-hover">
                                 <tr>
                                     <th>Location</th>
-                                    <td id="title">
+                                    <td id = "location">
 
                                         <a href="#" id="popover_location"></a>
 
-                                        <div id="pop_location-content" class="hide">
+                                        <div id="pop_location-content" >
                                             <form >
                                                 <div class="body">
                                                     <div class="form-group">
@@ -271,7 +271,7 @@
                                 </tr>
                                 <tr>
                                     <th>Location Description</th>
-                                    <td>
+                                    <td id= "locationDescription">
                                         <a href="#" id="popover_location_description"></a>
 
                                         <div id="pop_location_description-content" class="hide">
@@ -294,7 +294,7 @@
                                 </tr>    
                                 <tr>
                                     <th>Background</th>
-                                    <td>
+                                    <td id="background">
                                         <a href="#" id="popover_background"></a>
 
                                         <div id="pop_background-content" class="hide">
