--- a/src/static/index.html
+++ b/src/static/index.html
@@ -21,8 +21,8 @@
 								<img src="img/img/logo.png" align="right" width="10%">
 
 								<p id="date_time" style="color: #33B3D1;" align="right"></p>
-								<h2 style="color: #33B3D1;" align="left">DETI</h2>
-								<h4 style="color: #33B3D1;" align="left">Departamento de Eletrónica, Telecomunicações e Informática</h4>
+								<h2 style="color: #33B3D1;" align="left" id="location">DETI</h2>
+								<h4 style="color: #33B3D1;" align="left" id="locationDescription">Departamento de Eletrónica, Telecomunicações e Informática</h4>
 
 								<script>
 
