--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -247,12 +247,11 @@
                             <table id="dropbox-table" class="table table-hover">
                                 <tr>
                                     <th>Location</th>
-                                    <td id = "location">
-
+                                    <td>
                                         <a href="#" id="popover_location"></a>
 
-                                        <div id="pop_location-content" >
-                                            <form >
+                                        <div id="pop_location-content" class="hide">
+                                            <form>
                                                 <div class="body">
                                                     <div class="form-group">
                                                         <input type="text" id="new_location"
@@ -260,10 +259,10 @@
                                                                placeholder="New Location"/>
                                                     </div>
                                                     <div class="footer">
-                                                    <button id="location_btn" type="submit"
-                                                            class="btn bg-blue btn-block">Change Location
-                                                    </button>
-                                                </div>
+                                                        <button id="location_btn" type="submit"
+                                                                class="btn bg-blue btn-block">Change Location
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </form>
                                         </div>
@@ -271,11 +270,11 @@
                                 </tr>
                                 <tr>
                                     <th>Location Description</th>
-                                    <td id= "locationDescription">
+                                    <td>
                                         <a href="#" id="popover_location_description"></a>
 
                                         <div id="pop_location_description-content" class="hide">
-                                            <form >
+                                            <form>
                                                 <div class="body">
                                                     <div class="form-group">
                                                         <input type="text" id="new_location_description"
@@ -283,22 +282,23 @@
                                                                placeholder="New Location Description"/>
                                                     </div>
                                                     <div class="footer">
-                                                    <button id="location_description_btn" type="submit"
-                                                            class="btn bg-blue btn-block">Change Location Description
-                                                    </button>
-                                                </div>
+                                                        <button id="location_description_btn" type="submit"
+                                                                class="btn bg-blue btn-block">Change Location
+                                                            Description
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </form>
                                         </div>
                                     </td>
-                                </tr>    
+                                </tr>
                                 <tr>
                                     <th>Background</th>
-                                    <td id="background">
+                                    <td>
                                         <a href="#" id="popover_background"></a>
 
                                         <div id="pop_background-content" class="hide">
-                                            <form >
+                                            <form>
                                                 <div class="body">
                                                     <div class="form-group">
                                                         <input type="text" id="new_background"
@@ -306,15 +306,15 @@
                                                                placeholder="New Background"/>
                                                     </div>
                                                     <div class="footer">
-                                                    <button id="background_btn" type="submit"
-                                                            class="btn bg-blue btn-block">Change Background
-                                                    </button>
-                                                </div>
+                                                        <button id="background_btn" type="submit"
+                                                                class="btn bg-blue btn-block">Change Background
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </form>
                                         </div>
                                     </td>
-                                </tr>                            
+                                </tr>
                             </table>
                         </div>
                         <!-- /.box-body -->
@@ -338,7 +338,6 @@
 <script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
 <!-- Mine -->
 <script src="/admin/js/admin.js" type="text/javascript"></script>
-<script src="/admin/js/profile.js" type="text/javascript"></script>
 <script src="/admin/js/changes.js" type="text/javascript"></script>
 
 </body>
