Add Videos initial

--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -179,6 +179,12 @@
                         <small class="badge pull-right bg-yellow">12</small>
                     </a>
                 </li>
+                <li>
+                    <a href="pages/youtube.html">
+                        <i class="fa fa-youtube"></i> <span>YouTube</span>
+                        <small class="badge pull-right bg-yellow">12</small>
+                    </a>
+                </li>
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-folder"></i> <span>Examples</span>
