backend HTML add videos youtube

--- a/src/static/admin/pages/youtube.html
+++ b/src/static/admin/pages/youtube.html
@@ -242,9 +242,9 @@
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                 <b>Error!</b> <span class="error_message"></span>.
             </div>
-
-            <div class="input-group" id="field">
-              <input id="field1" type="text" class="form-control" placeholder="Your YouTube URL">
+            <!-- http://bootsnipp.com/snippets/featured/dynamic-form-fields-add-amp-remove -->
+            <div class="input-group" id="field1">
+              <input type="text" class="form-control" placeholder="Your YouTube URL">
                 <span class="input-group-btn">
                     <button id="b1" class="btn add-more" type="button">+</button>
                 </span>
