Fix HTMLSettings retrieveUpdates named to get_HTMLChanges and now is a public endpoint

--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -260,7 +260,7 @@
                                                     </div>
                                                     <div class="footer">
                                                         <button id="location_btn" type="submit"
-                                                                class="btn bg-blue btn-block">Change Location
+                                                                class="btn bg-blue btn-block" onclick="sendTo()" >Change Location
                                                         </button>
                                                     </div>
                                                 </div>
@@ -283,7 +283,7 @@
                                                     </div>
                                                     <div class="footer">
                                                         <button id="location_description_btn" type="submit"
-                                                                class="btn bg-blue btn-block">Change Location
+                                                                class="btn bg-blue btn-block" onclick="sendTo()">Change Location
                                                             Description
                                                         </button>
                                                     </div>
@@ -307,7 +307,7 @@
                                                     </div>
                                                     <div class="footer">
                                                         <button id="background_btn" type="submit"
-                                                                class="btn bg-blue btn-block">Change Background
+                                                                class="btn bg-blue btn-block" onclick="sendTo()">Change Background
                                                         </button>
                                                     </div>
                                                 </div>
@@ -337,7 +337,6 @@
 <!-- AdminLTE App -->
 <script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
 <!-- Mine -->
-<script src="/admin/js/admin.js" type="text/javascript"></script>
 <script src="/admin/js/changes.js" type="text/javascript"></script>
 
 </body>
