--- a/src/static/index.html
+++ b/src/static/index.html
@@ -22,7 +22,7 @@
 
 								<p id="date_time" style="color: #33B3D1;" align="right"></p>
 								<h2 style="color: #33B3D1;" align="left" id="location">DETI</h2>
-								<h4 style="color: #33B3D1;" align="left" id="locationDescription">Departamento de Eletrónica, Telecomunicações e Informática</h4>
+								<h4 style="color: #33B3D1;" align="left" id="location_description">Departamento de Eletrónica, Telecomunicações e Informática</h4>
 
 								<script>
 
