--- a/src/static/admin/pages/tables/data.html
+++ b/src/static/admin/pages/tables/data.html
@@ -21,8 +21,6 @@
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
-
-        <script src="/admin/js/tables.js"></script>
     </head>
     <body class="skin-blue">
         <!-- header logo: style can be found in header.less -->
@@ -478,27 +476,15 @@
         <!-- jQuery 2.0.2 -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- Bootstrap -->
-        <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
-        <!-- DATA TABES SCRIPT -->
-        <script src="../../js/plugins/datatables/jquery.dataTables.js" type="text/javascript"></script>
-        <script src="../../js/plugins/datatables/dataTables.bootstrap.js" type="text/javascript"></script>
+        <script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- AdminLTE App -->
-        <script src="../../js/AdminLTE/app.js" type="text/javascript"></script>
+        <script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
 
-        <!-- page script -->
-        <script type="text/javascript">
-            $(function() {
-                $("#example1").dataTable();
-                $('#example2').dataTable({
-                    "bPaginate": true,
-                    "bLengthChange": false,
-                    "bFilter": false,
-                    "bSort": true,
-                    "bInfo": true,
-                    "bAutoWidth": false
-                });
-            });
-        </script>
+        <script src="/admin/js/jquery-ui-1.10.3.js"></script>
+
+        <script src="/admin/js/jquery.tablednd.js"></script>
+
+        <script src="/admin/js/tables.js"></script>
 
     </body>
 </html>
