Add links js + html + db done

--- a/src/static/admin/pages/youtube.html
+++ b/src/static/admin/pages/youtube.html
@@ -244,7 +244,7 @@
             </div>
             <!-- http://bootsnipp.com/snippets/featured/dynamic-form-fields-add-amp-remove -->
             <div class="input-group" id="field1">
-              <input type="text" class="form-control" placeholder="Your YouTube URL">
+              <input type="text" class="form-control" placeholder="Your YouTube URL" id="field_input">
                 <span class="input-group-btn">
                     <button id="b1" class="btn add-more" type="button">+</button>
                 </span>
