html + js to remove youtube videos done

--- a/src/static/admin/pages/youtube.html
+++ b/src/static/admin/pages/youtube.html
@@ -243,7 +243,7 @@
                 <b>Error!</b> <span class="error_message"></span>.
             </div>
             <!-- http://bootsnipp.com/snippets/featured/dynamic-form-fields-add-amp-remove -->
-            <div class="input-group" id="field1">
+            <div class="input-group" id="field">
               <input type="text" class="form-control" placeholder="Your YouTube URL" id="field_input">
                 <span class="input-group-btn">
                     <button id="b1" class="btn add-more" type="button">+</button>
