Added sunrise and sunset time.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -77,6 +77,16 @@
 
 				</div>
 
+				<div style="min-height: 90px;" class="col-lg-3" align="center" id="sunrise">
+				sunrise
+
+				</div>
+
+				<div style="min-height: 90px;" class="col-lg-3" align="center" id="sunset">
+				sunset
+
+				</div>
+
 
 				<div style="min-height: 200px;" class="col-lg-3 bg-warning" align="center">
 					<span style="position:absolute; bottom:0; left:10%;"> 
