Dropbox and Twitter Authentication Systems updated.

--- a/src/static/admin/pages/accounts/register-dropbox.html
+++ b/src/static/admin/pages/accounts/register-dropbox.html
@@ -25,7 +25,7 @@
     <form action="#" method="post">
         <div class="footer request">
             <button id="request-btn" type="button" class="btn bg-olive btn-block">Request Authentication Token</button>
-            <a href="accounts.html#twitter" class="text-center">Take me back</a>
+            <a href="accounts.html#dropbox" class="text-center">Take me back</a>
         </div>
     </form>
 
