--- a/src/static/admin/pages/accounts/accounts.html
+++ b/src/static/admin/pages/accounts/accounts.html
@@ -240,7 +240,7 @@
 
                             <div class="box-tools">
                                 <div class="pull-right">
-                                    <a href="https://www.dropbox.com/1/oauth2/authorize?response_type=token&client_id=rbfnah947b3iobb&redirect_uri=http://localhost:8080/admin/pages/accounts/accounts.html"><i
+                                    <a href="register-dropbox.html"><i
                                             class="fa fa-plus"></i> New account</a>
                                 </div>
                             </div>
