Added endpoint for tweets in main page. Now, it is needed a slider or something like that to animate the tweets transition.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -86,7 +86,9 @@
 
 			<div class="row footer">
 				<div class="col-lg-12 bg-danger" style="height: 100%" align="center">
-					Tweets
+					<table id="tweets-table">
+
+					</table>
 				</div>
 			</div>
 		</div>
@@ -95,5 +97,6 @@
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/raspi-tv-front.js"></script>
 		<script src="/js/changes.js"></script>
+		<script src="/js/raspi-tweets.js"></script>
 	</body>
 </html>
