Delete blank spaces from news. Rounded values of wind. Insert tweets on index. Slider on tweets.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -86,9 +86,9 @@
 
 			<div class="row footer">
 				<div class="col-lg-12 bg-danger" style="height: 100%" align="center">
-					<table id="tweets-table">
+					<span id="tweets-table">
 
-					</table>
+					</span>
 				</div>
 			</div>
 		</div>
