Updated Dropbox and Twitter selection system.

--- a/src/static/admin/pages/tables/order-dropbox-files.html
+++ b/src/static/admin/pages/tables/order-dropbox-files.html
@@ -406,12 +406,24 @@
                 <section class="content">
                     <div class="row">
                         <div class="col-xs-12">
-                            <ul class="list-group" id="services-table">
+                            <strong>Images</strong>
+                        </div>
+                        <div class="col-xs-12">
+                            <ul class="list-group" id="dropbox-images-table">
                             </ul>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12" style="text-align: center;">
+                        <div class="col-xs-12">
+                            <strong>Videos</strong>
+                        </div>
+                        <div class="col-xs-12">
+                            <ul class="list-group" id="dropbox-videos-table">
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12" style="text-align: center;" id="col-btn">
                             <div class="btn btn-lg btn-success" id="btn-update">Update</div>
                         </div>
                     </div>
@@ -442,7 +454,7 @@
 
         <script src="/admin/js/jquery-ui-1.10.3.js"></script>
 
-        <script src="/admin/js/order-front-end.js"></script>
+        <script src="/admin/js/order-dropbox-files.js"></script>
 
     </body>
 </html>
