--- a/src/static/admin/pages/tables/order-tweets.html
+++ b/src/static/admin/pages/tables/order-tweets.html
@@ -406,29 +406,35 @@
                 <section class="content">
                     <div class="row">
                         <div class="col-xs-12">
-                            <!-- Twitter -->
-                            Twitter
                             <ul class="list-group" id="tweets-table">
-                            </ul>
-
-                            <!-- Dropbox -->
-                            Dropbox Files
-                            <ul class="list-group" id="dropbox-table">
                             </ul>
                         </div>
                     </div>
-                <div class="row">
-                    <div class="col-lg-12" style="text-align: center;">
-                        <div class="btn btn-lg btn-success" id="btn-update">Update</div>
+                    <div class="row">
+                        <div class="col-lg-12" style="text-align: center;" id="col-btn">
+                            <div class="btn btn-lg btn-success" id="btn-update">Update</div>
+                        </div>
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="alert alert-success alert-dismissible" role="alert" id="alert-success-created" style="display: none;">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Updated with success!</strong>
+                        </div>
+                        <div class="alert alert-danger alert-dismissible" role="alert" id="alert-error-created" style="display: none;">
+                            <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>An error ocurred! Please, try again.</strong>
+                        </div>
+                        <div class="loading-gif-container" style="display: none;">
+                            <i class='fa fa-spinner'></i>
+                        </div>
+                    </div>
                 </section><!-- /.content -->
             </aside><!-- /.right-side -->
         </div><!-- ./wrapper -->
 
 
         <!-- jQuery 2.0.2 -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <script src="/admin/js/jquery.min.js"></script>
         <!-- Bootstrap -->
         <script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- AdminLTE App -->
@@ -436,7 +442,7 @@
 
         <script src="/admin/js/jquery-ui-1.10.3.js"></script>
 
-        <script src="/admin/js/order-tables.js"></script>
+        <script src="/admin/js/order-tweets.js"></script>
 
     </body>
 </html>
