Tested new front-end ordered style.

--- a/src/static/admin/register-dropbox.html
+++ b/src/static/admin/register-dropbox.html
@@ -5,11 +5,11 @@
     <title>AdminLTE | Registration Page</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- bootstrap 3.0.2 -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <!-- font Awesome -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
-    <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css"/>
+    <link href="css/AdminLTE.css" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,7 +21,7 @@
 <body class="bg-black">
 
 <div class="form-box" id="login-box">
-    <div class="header">Register New Account</div>
+    <div class="header">New Dropbox Access Token</div>
     <form action="#" method="post">
         <div class="footer request">
             <button id="request-btn" type="button" class="btn bg-olive btn-block">Request Authentication Token</button>
@@ -39,8 +39,8 @@
 <!-- jQuery 2.0.2 -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <!-- Bootstrap -->
-<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/admin/js/admin.js" type="text/javascript"></script>
-<script src="create_dropbox.js" type="text/javascript"></script>
+<script src="/admin/js/create_dropbox.js" type="text/javascript"></script>
 </body>
 </html>
