--- a/src/static/admin/accounts.html
+++ b/src/static/admin/accounts.html
@@ -94,7 +94,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="../widgets.html">
+                    <a href="pages/widgets.html">
                         <i class="fa fa-th"></i> <span>Widgets</span>
                         <small class="badge pull-right bg-green">new</small>
                     </a>
@@ -106,9 +106,9 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
-                        <li><a href="../charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
-                        <li><a href="../charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a>
+                        <li><a href="pages/charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
+                        <li><a href="pages/charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
+                        <li><a href="pages/charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a>
                         </li>
                     </ul>
                 </li>
@@ -119,11 +119,11 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                        <li><a href="../UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                        <li><a href="../UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                        <li><a href="../UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                        <li><a href="../UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
+                        <li><a href="pages/UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
+                        <li><a href="pages/UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
+                        <li><a href="pages/UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
+                        <li><a href="pages/UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
+                        <li><a href="pages/UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -132,11 +132,11 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../forms/general.html"><i class="fa fa-angle-double-right"></i> General
+                        <li><a href="pages/forms/general.html"><i class="fa fa-angle-double-right"></i> General
                             Elements</a></li>
-                        <li><a href="../forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a>
+                        <li><a href="pages/forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a>
                         </li>
-                        <li><a href="../forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
+                        <li><a href="pages/forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -145,19 +145,19 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a>
+                        <li><a href="pages/tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a>
                         </li>
-                        <li><a href="../tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
+                        <li><a href="pages/tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../calendar.html">
+                    <a href="pages/calendar.html">
                         <i class="fa fa-calendar"></i> <span>Calendar</span>
                         <small class="badge pull-right bg-red">3</small>
                     </a>
                 </li>
                 <li>
-                    <a href="../mailbox.html">
+                    <a href="pages/mailbox.html">
                         <i class="fa fa-envelope"></i> <span>Mailbox</span>
                         <small class="badge pull-right bg-yellow">12</small>
                     </a>
@@ -168,15 +168,15 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
-                        <li><a href="../examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
-                        <li><a href="../examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a>
+                        <li><a href="pages/examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
+                        <li><a href="pages/examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
+                        <li><a href="pages/examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a>
                         </li>
-                        <li><a href="../examples/lockscreen.html"><i class="fa fa-angle-double-right"></i>
+                        <li><a href="pages/examples/lockscreen.html"><i class="fa fa-angle-double-right"></i>
                             Lockscreen</a></li>
-                        <li><a href="../examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
-                        <li><a href="../examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
-                        <li><a href="../examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a>
+                        <li><a href="pages/examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
+                        <li><a href="pages/examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
+                        <li><a href="pages/examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a>
                         </li>
                     </ul>
                 </li>
@@ -266,7 +266,7 @@
 
                             <div class="box-tools">
                                 <div class="pull-right">
-                                    <a href="register_twitter.html"><i class="fa fa-plus"></i> New account</a>
+                                    <a href="register-twitter.html"><i class="fa fa-plus"></i> New account</a>
                                 </div>
                             </div>
                         </div>
