--- a/src/static/admin/register-twitter.html
+++ b/src/static/admin/register-twitter.html
@@ -5,11 +5,11 @@
     <title>Raspi-TV | Twitter Registration</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- bootstrap 3.0.2 -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <!-- font Awesome -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
-    <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css"/>
+    <link href="css/AdminLTE.css" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -60,9 +60,9 @@
 <!-- jQuery 2.0.2 -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <!-- Bootstrap -->
-<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- Mine -->
 <script src="/admin/js/admin.js" type="text/javascript"></script>
-<script src="create_twitter.js" type="text/javascript"></script>
+<script src="/admin/js/create_twitter.js" type="text/javascript"></script>
 </body>
 </html>
