--- a/src/static/index.html
+++ b/src/static/index.html
@@ -48,7 +48,7 @@
 
 			<div class="row">
 				<div class="col-lg-9" id="content_div" align="center">
-					<iframe src="news.html" id="content_frame" frameborder="0" scrolling="no"></iframe>
+					<iframe id="content_frame" frameborder="0" scrolling="no"></iframe>
 				</div>
 
 				<div class="col-lg-3" id="right_bar" align="center">
@@ -96,7 +96,5 @@
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/raspi-tv-front.js"></script>
-		<script src="/js/changes.js"></script>
-		<script src="/js/raspi-tweets.js"></script>
 	</body>
 </html>
