--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -180,7 +180,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="admin/pages/youtube.html">
+                    <a href="admin/youtube.html">
                         <i class="fa fa-youtube"></i> <span>YouTube</span>
                     </a>
                 </li>
